# Rcop

./: README
Rcop-core/: Cargo.toml
Rcop-core/src/: checksum.rs  ffi.rs  lib.rs  packet.rs  types.rs
Rcop-core/tests/: integration_test.rs
